# stepvisualizer

./: .gitignore  404.html  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  main-6478ca2d4f733397.css  main.css  rust-toolchain.toml  stepvisualizer-51dd7e3f4e561221.js  stepvisualizer-51dd7e3f4e561221_bg.wasm  stepvisualizer-55d8a5c1d41100ec.js  stepvisualizer-55d8a5c1d41100ec_bg.wasm  stepvisualizer-86b6649529a985de.js  stepvisualizer-86b6649529a985de_bg.wasm  stepvisualizer-8dd5351e8349c1ae.js  stepvisualizer-8dd5351e8349c1ae_bg.wasm
.github/workflows/: deploy.yml  workflow.yml
examples/: boxy_with_cylindricity.stp
src/: apptracing.rs  header.rs  left_panel.rs  lib.rs  main_panel.rs  right_panel.rs  workspace.rs
src/common/: cache.rs  constants.rs  math.rs  mod.rs  parser.rs  render.rs  storage.rs  types.rs
src/components/: details_panel.rs  file_history_panel.rs  meshes_panel.rs  mod.rs  stepmesh_panel.rs
src/rendering/: camera.rs  mod.rs  renderer.rs  wgpu_state.rs
