[package]
name = "stepvisualizer"
version = "0.0.1"
authors = ["mtb0x1"]
description = "A WebAssembly-based 3D STEP file visualizer built with Rust and WebGPU."
keywords = ["stepfile", "stepvisualizer", "webgpu", "wasm", "step-rs", "csr"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo = "0.11.0"
js-sys = "0.3.81"
ruststep = { version = "0.4.0", features = ["ap201", "ap203"]}
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3.81", features = ["HtmlCanvasElement", "WebGl2RenderingContext","Window", "Document"] }
yew = { version = "0.21.0", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-storage = "0.3"
wgpu = { version = "27.0.1", features = ["webgpu"] }
time = { version = "0.3.44", features = ["wasm-bindgen"] }
tracing = "0.1.41"
tracing-web = "0.1.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "time"] }
winit = "0.30.12"
pollster = "0.4.0"
truck-stepio = "0.3.0"
truck-polymesh = "0.6.0"
truck-modeling = "0.6.0"
truck-meshalgo = "0.4.0"
truck-topology = "0.6.0"
console_error_panic_hook = "0.1.7"
bytemuck = "1.18.0"
rand = "0.8.5"
truck-geometry = "0.5.0"
 